--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
   margin: 15px;
   line-height: 200px;
   background-color: aquamarine;
+  box-shadow: 0px 10px 10px black;
 }
 p{
     margin: 15px;
